<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SyncScrolling samples</string>
    <string name="title">Click one to see a cool synchronized scrolling!</string>
    <string name="simple">Simple View Hierarchy</string>
    <string name="complex">Complex View Hierarchy</string>
    <string name="longer">Longer View Hierarchy</string>
    <string name="two">Two Synchronized Scrollers</string>
    <string name="gravity">Three with different Gravity</string>
    <string name="gravity_center_horizontal">Gravity is Center Horizontal!</string>
    <string name="gravity_right">Gravity is Right!</string>
    <string name="gravity_left">Gravity is Left!</string>
    <string name="gmail">Something similar to GMail App</string>
    <string name="somebodys_name">Somebody\'s name</string>
    <string name="reply">Reply</string>
    <string name="email_subject">Email subject</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, ne est alterum oporteat. An dicam graeci mei, aliquando dissentiet usu in. Pro detracto appareat consequat cu, liber ridens luptatum vim an, cum id aperiri noluisse expetendis. An eos nonumy soluta temporibus. Mei id vidisse volutpat moderatius, pro solum tollit contentiones ex. At melius argumentum eam, ei alienum verterem vim. Vix detracto deleniti elaboraret ea, ea nam quod fierent pertinax.\n\nEa liber impedit qui, stet iriure has at. Eam ne nihil scripserit ullamcorper. Ea sed elit melius epicuri, eu admodum mediocritatem sea, mei agam comprehensam in. Agam assentior vis ea, veri vocibus mentitum sed id, ius dico elitr soleat ex. Qui in modus eligendi democritum, ius eu omnium delicata. Ex ius ridens molestie urbanitas. Qualisque theophrastus at eos, vix partem euismod mediocrem et.\n\nEt lucilius salutatus vulputate pro, wisi aeterno consequuntur ea sit, regione meliore corpora id est. Minim mollis ei has. Usu tractatos vulputate id, cu sea purto natum admodum. Nam et tantas dolore voluptatum, at vel nostro molestiae reprehendunt. Mea in facete detraxit petentium. Et qui accusata patrioque, tempor mucius deserunt eu eam, dolorem torquatos ullamcorper duo ei.\n\nDuo ad vituperata persequeris, unum graeci interpretaris vel cu, an harum electram vix. Errem recusabo contentiones mel eu, qui no modo clita primis. No dolorem persecuti maiestatis sed, sed commune repudiare intellegat ad, ex iudico fastidii reprehendunt mea. Accumsan assueverit et quo, duis audire omnesque an vis. Commodo gubergren duo ei, id sit essent aliquando instructior, erant legimus debitis ea quo. Per tibique iracundia ex, eos te prompta salutatus.\n\nId ius praesent reprehendunt, eu laudem utamur eam. Et est dictas sententiae. In alii iuvaret nostrum pri. Inani paulo fastidii in vim. Probatus conceptam est at. At apeirian erroribus vim.\n\nNec elit inimicus facilisis at, mea scripta percipit patrioque te. Munere dissentiet et eam, odio nibh solet duo at. Ei illum commune recusabo ius, autem verear dolorem cu usu. Habeo animal sapientem ad mei, usu placerat ponderum indoctum ad. Nec ex quas omnium copiosae, qui erant aliquando democritum ei. Noster maiorum vis cu.\n\nTe quo agam facer mandamus, at graeci oportere duo. Malis doctus aeterno ex est, equidem platonem ea has, in etiam latine euripidis pri. Qui id tacimates corrumpit. Te simul quaeque sed.\n\nSea aliquam phaedrum definitiones in, cibo moderatius contentiones at eum. Melius delenit temporibus quo no. Et has malis nostro partiendo, pri ex soluta consequuntur. Ex atqui definitiones per, te his sint ponderum euripidis, ad sed offendit quaestio definitionem. Accumsan elaboraret usu ne. Sed et accusata reprehendunt, usu ad alia tibique.\n\nIn possim docendi sadipscing vim, ei pri eros erat aliquid. Saepe diceret ex sea, in soluta iisque ius. Cu sumo electram disputando sit, ad solet epicuri eum, ad menandri volutpat ocurreret eum. Dicat soleat iriure mel in, no euismod laboramus vulputate duo.\n\nEa qui dicunt atomorum, eos commune invenire ex, quodsi appareat te est. Nec ei cibo postulant maluisset, vix eripuit fierent ut. Quod debet congue no vix, ut reque denique eam. Ad quas vocent legimus sit. Est volumus blandit no, natum altera atomorum te his. Patrioque adolescens signiferumque cum eu.</string>
</resources>