<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xrigau="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fefefe" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dip"
            android:text="@string/title"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="20sp"
            android:gravity="center" />

        <Button
            android:id="@+id/simple"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/simple" />

        <Button
            android:id="@+id/complex"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/complex" />

        <Button
            android:id="@+id/longer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/longer" />

        <Button
            android:id="@+id/two"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/two" />

        <Button
            android:id="@+id/gravity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/gravity" />

        <Button
            android:id="@+id/gmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/gmail" />
    </LinearLayout>

</ScrollView>