<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xrigau="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <com.xrigau.syncscrolling.view.EnhancedScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.xrigau.syncscrolling.view.SynchronizedScrollLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                xrigau:placeholderView="@+id/base_view"
                xrigau:synchronizedView="@+id/synchronized_view"
                xrigau:syncView_gravity="center_horizontal" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingBottom="10dip" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_launcher" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gravity_center_horizontal" />
                    </LinearLayout>

                    <View
                        android:id="@+id/base_view"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:background="#ff0000" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dip"
                        android:text="@string/lorem_ipsum" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/synchronized_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#88232323"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="10dip"
                    android:paddingTop="10dip" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@android:drawable/gallery_thumb" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gravity_center_horizontal" />
                </LinearLayout>
            </com.xrigau.syncscrolling.view.SynchronizedScrollLayout>

            <com.xrigau.syncscrolling.view.SynchronizedScrollLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                xrigau:placeholderView="@+id/base_view"
                xrigau:syncView_gravity="right"
                xrigau:synchronizedView="@+id/synchronized_view" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingBottom="10dip" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_launcher" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gravity_right" />
                    </LinearLayout>

                    <View
                        android:id="@+id/base_view"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:background="#ff0000" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dip"
                        android:text="@string/lorem_ipsum" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/synchronized_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#88232323"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="10dip"
                    android:paddingTop="10dip" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@android:drawable/gallery_thumb" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gravity_right" />
                </LinearLayout>
            </com.xrigau.syncscrolling.view.SynchronizedScrollLayout>
            <com.xrigau.syncscrolling.view.SynchronizedScrollLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                xrigau:placeholderView="@+id/base_view"
                xrigau:syncView_gravity="left"
                xrigau:synchronizedView="@+id/synchronized_view" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingBottom="10dip" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_launcher" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gravity_left" />
                    </LinearLayout>

                    <View
                        android:id="@+id/base_view"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:background="#ff0000" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dip"
                        android:text="@string/lorem_ipsum" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/synchronized_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#88232323"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="10dip"
                    android:paddingTop="10dip" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@android:drawable/gallery_thumb" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gravity_left" />
                </LinearLayout>
            </com.xrigau.syncscrolling.view.SynchronizedScrollLayout>
        </LinearLayout>
    </com.xrigau.syncscrolling.view.EnhancedScrollView>

</LinearLayout>